--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
 .header {
 display: flex;
 position: relative;
-flex-wrap: wrap;
 justify-content: space-around;
 opacity:0.78;
-font-size: 2.2rem;
+flex-wrap: wrap;
 align-items:center ;
 background: linear-gradient(0, #18151a 5%, #141313 50%);
 padding-left:var(--spacing-small);
@@ -12,16 +11,11 @@ padding-top:var(--spacing-small);
 padding-bottom:var(--spacing-medium);
 padding-right:var(--spacing-large);
 height: 100px;
-padding: 0;
-margin: 0;
-
 }
 
 
 body {
   width: 100%;
-  padding: 0;
-  margin: 0;
   background: linear-gradient(-45deg, #104350, #290129, #4d2b61, #0f2941);
   background-size: 400% 400%;
   height: 100vh;
@@ -46,13 +40,30 @@ body {
 
 
 .navbar {
-
+    display: flex;
+    text-align:center;
+    font-size:1.2rem;
+    font-weight:600;
+    text-transform:uppercase;
+    letter-spacing:.1em;
+    gap: 1em;
 
 
 
 }
 
 
+li {
+    list-style: none;
+   }
+a {
+    text-decoration: none;
+   }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+   }
 
 
