--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 
+
 body {
     width: 100%;
     background: linear-gradient(-45deg, #2588a1, #da3e7f, #a255cf, #418dd4);
@@ -17,7 +18,7 @@ opacity:0.78;
 flex-wrap: wrap;
 align-items:center ;
 background: linear-gradient(0, #18151a 5%, #141313 50%);
-height: 100px;
+height: 90px;
 }
 
 
@@ -63,7 +64,7 @@ html {
 
 }
 .container {
-    flex: 1    ;
+    flex: 1;
 }
 .wrapper {
     width: auto;
@@ -190,7 +191,10 @@ svg {
   .pink{
       color:rgb(238, 107, 234);
   }
+.pstart {
+    font-family: 'Press Start 2P';
 
+}
 
 li {
     list-style: none;
@@ -204,5 +208,7 @@ a {
     padding: 0;
     box-sizing: border-box;
    }
+
+   
 
 
