add-donate-qrcode

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ html {
     margin: 2rem;
     color: #111;
     font-weight:600;
+    height: 50px;
 
 
 }
@@ -94,6 +95,7 @@ html {
     margin-bottom: 2rem;
     color: #111;
     font-weight:600;
+    height: 50px;
     
 }
 
