--- a/qrcode.css
+++ b/qrcode.css
@@ -10,23 +10,26 @@
   box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.75);
   border-radius: 25px;
   border: 1px solid rgba(0 , 0 , 0 , 0.75);
-  min-height:250px;
+  height:250px;
 }
 
  .form{
   background: pink;
   width: 100%;
-  height:10px;
+  height:19px;
   padding: 20px 30px;
   border-radius: 25px 25px 0 0;
   display: flex;
-  
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;  
+
 }
 
 .qrcode {
-  width:300px;
-  height:300px;
-  margin: 30px auto;
+  width:200px;
+  height:200px;
+  margin: 0px auto;
   text-align: center;
   display: flex;
   align-items: center;
