--- a/css/main.css
+++ b/css/main.css
@@ -1,2 +1,6 @@
 @import 'style.css';
 @import 'qrcode.css';
+@import 'footer.css';
+@import 'navbar.css';
+@import 'typed.css';
+@import 'bubbleSpeech.css';
