--- a/css/style.css
+++ b/css/style.css
@@ -10,58 +10,9 @@ body {
     z-index: -2;
   }
 
-.header {
-display: flex;
-position: relative;
-justify-content: space-around;
-opacity:0.78;
-flex-wrap: wrap;
-align-items:center ;
-background: linear-gradient(0, #18151a 5%, #141313 50%);
-height: 90px;
-}
-
-
-.navbar {
-    display: flex;
-    text-align:center;
-    font-size:1.2rem;
-    font-weight:600;
-    text-transform:uppercase;
-    letter-spacing:.1em;
-    gap: 1em;
-    font-family: 'Press Start 2P';
-}
 
 html {
     min-height: 100%;
-}
-
-.fo {   
-    display: flex;
-    justify-content: center;
-    font-family: Nunito ;
-    position: absolute;
-    justify-self: center;
-    width: 100%;
-    bottom: 0;
-
-}
-
-
-.social {
-    width:auto;
-    border-radius:1rem;
-    display: flex;
-    align-content:center;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-top: 1rem; 
-    padding-bottom: 1rem;
-    padding-left: .5rem; 
-    padding-right: .5rem;
-
-
 }
 .container {
     flex: 1;
@@ -77,77 +28,24 @@ html {
 
 }
 
-.emojiTyped {
-    font-size:2.25rem;	
-    text-align:center;
-    margin: 2rem;
-    color: #111;
-    font-weight:600;
-    height: 50px;
-
-
-}
-
-.stringTyped {
-
-    font-size:2.25rem;
-    text-align:center;
-    margin-bottom: 2rem;
-    color: #111;
-    font-weight:600;
-    height: 50px;
-    
-}
-
-#typed {
-
-    font-family: 'Press Start 2P';
-
-}
-
 .sasa {
 
-    font-size:2.25rem;
     text-align:center;
-    margin: 2rem;
-    color: #111;
+    margin: 5rem;
+    color: transparent;
     font-weight:600;
-}
+    font-family: 'Press Start 2P';
+    font-size: 40px;
+    line-height: 40px;
+    letter-spacing: 5px;
+    text-shadow: -2px 0 0 #fdff2a,
+      -4px 0 0 #df4a42,
+      2px 0 0 #91fcfe,
+      4px 0 0 #4405fc;    
 
 
-.s {
-    color: #111;
-    display:inline-block;
-    text-align:center;
-    margin-top: .5rem; 
-    margin-bottom: .5rem;
-    margin-left: 1rem; 
-    margin-right: 1rem;
-    backface-visibility: hidden; 
-    transform: translateZ( 0 );
-    transition: transform .25s ease-in-out;
 }
 
-#s_github:hover{
-    text-decoration:none;
-    transition: color .15s ease-in;
-    transform: scale( 1.2 ) ;
-      color: #999;
-}
-
-#s_twitter:hover {
-    text-decoration:none;
-    transition: color .15s ease-in;
-    transform: scale( 1.2 );
-    color: #357edd;
-
-}
-#s_insta:hover {
-    text-decoration:none;
-    transition: color .15s ease-in;
-    transform: scale( 1.2 ) ;
-    color: #5e2ca5;
-}
 
 svg {
     display:inline-block;
@@ -161,10 +59,6 @@ svg {
     font-size:.875rem;
 }
 
-
-.navbar :hover {
-    color: rgb(189, 184, 184);
-}
 
 
 @keyframes efect {
