--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,12 @@ html {
       -4px 0 0 #df4a42,
       2px 0 0 #91fcfe,
       4px 0 0 #4405fc;    
+      animation: glitch 3s ease-in reverse infinite;
 
 
 }
 
+  
 
 svg {
     display:inline-block;
