--- a/css/footer.css
+++ b/css/footer.css
@@ -2,10 +2,12 @@
   display: flex;
   justify-content: center;
   font-family: Nunito ;
-  position: relative;
+  position: absolute;
   justify-self: center;
   width: 100%;
+  margin-top: auto;
   bottom: 0;
+
 
 }
 
