--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   font-family: Nunito ;
-  position: absolute;
+  position: relative;
   justify-self: center;
   width: 100%;
   margin-top: auto;
