--- a/css/typed.css
+++ b/css/typed.css
@@ -1,17 +1,17 @@
 .emojiTyped {
-  font-size:2.25rem;	
+  font-size:xx-large;	
   text-align:center;
   margin: 2rem;
   color: #111;
   font-weight:600;
-  height: 50px;
+  height: 70px;
 
 
 }
 
 .stringTyped {
 
-  font-size:2.25rem;
+  font-size:xx-large;
   text-align:center;
   margin-bottom: 2rem;
   color: #111;
