--- a/css/card.css
+++ b/css/card.css
@@ -1,22 +1,22 @@
 @import url('http://fonts.cdnfonts.com/css/charriot-deluxe');
 
-.best {
+.card-section {
   display: grid;
   grid-gap:30px;
   justify-items:center;
-  grid-template-columns: auto auto ;
+  grid-template-columns: auto auto auto ;
   margin: 0 auto;
   width: fit-content;
 	margin-top: 30px;
 }
 
-.best, a{
+.card-section, a{
   text-decoration: none;
   opacity: 1;
 }
 
 
-.best a:hover{
+.card-section a:hover{
   opacity: 0.5;
 
 }
@@ -55,7 +55,7 @@
 
 
 }
-.info-text , span {
+.info-text span {
   font-size: medium;
 }
 #info-title{
@@ -64,9 +64,11 @@
   font-family: 'Press Start 2P';
   
 }
-
+.hide{
+  display: none;
+}
 .card {
-  background-color: rgb(235, 152, 0);
+  background-color: #ff9800;
   border: 3px solid lightgray;
   box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.43);
   border-radius: 5px;
