--- a/css/qrcode.css
+++ b/css/qrcode.css
@@ -22,7 +22,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: center;  
+  justify-content: center;
+  font-size: small;
 
 }
 
