--- a/css/cv.css
+++ b/css/cv.css
@@ -5,14 +5,57 @@
   border-color: #000;
   border-style: solid;
   border-width: 4px;
-  top:20%;
+  top:35%;
   left: 60%;
-  width: 600px;
-  height: 400px;
+  max-width: 400px;
+  max-height: 500px;
+  margin-right: 35px;
+
+}
+.pixelized-container-2 {
+
+  display: table;
+  position: absolute;
+  padding: 1.5rem 2rem;
+  border-color: #000;
+  border-style: solid;
+  border-width: 4px;
+  top:30%;
+  left: 20%;
+  max-width: 500px;
+  max-height: 600px;
+  flex-wrap: wrap;
+  flex-direction: column;
 
 }
 
+.pixelized-container-3 {
+  position: absolute;
+  border-color: #000;
+  border-style: solid;
+  border-width: 4px;
+  top:53%;
+  left: 20%;
+  width: 600px;
+  height: 300px;
+  font-family: 'Press Start 2P';
+
+}
+
+
 .pixelized-container>.title {
+  display: table;
+  padding: 0 0.5rem;
+  margin: -1.8rem 0 1rem;
+  font-size: 1rem;
+  background-color: #fff;
+  font-family: "Press Start 2P";
+  font-weight: 400;
+  line-height: 1.5;
+}
+
+
+.p-title {
   display: table;
   padding: 0 0.5rem;
   margin: -1.8rem 0 1rem;
@@ -29,4 +72,82 @@
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+
+}
+
+.row {
+  box-sizing: border-box;
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-right: -0.5rem;
+  margin-left: -0.5rem;
+  margin:0px -5px;
+}
+
+.skill-name {
+  font-family: "Press Start 2P";
+  font-weight: 400;
+  line-height: 1.5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.skill-bar {
+  flex-basis: 66.66666667%;
+  box-sizing: border-box;
+  flex: 0 0 auto;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  display: block;
+  width: 100%;
+
+}
+
+
+
+progress {
+  height: 25px;
+  box-sizing: border-box;
+  display: inline-block;
+  border-image-repeat: space;
+  border-image-slice: 2;
+  border-image-width: 2;
+  border-image-outset: 2;
+  margin: 4px;
+  width: 100%;
+  appearance: none;
+  border-style: solid;
+  border-width: 4px;
+  vertical-align: baseline;
+  border-image-source: url('data:image/svg+xml;utf8,<?xml version="1.0" encoding="UTF-8" ?><svg version="1.1" width="5" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2 1 h1 v1 h-1 z M1 2 h1 v1 h-1 z M3 2 h1 v1 h-1 z M2 3 h1 v1 h-1 z" fill="rgb(33,37,41)" /></svg>');
+}
+
+.name-bar {
+  flex-basis: 66.66666667%;
+  max-width: 36.66666667%;
+  box-sizing: border-box;
+  flex: 0 0 auto;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  font-weight: 400;
+  line-height: 1.5;
+  font-family: 'Press Start 2P';
+  width: 100%;
+}
+
+.row2 {
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-right: -0.5rem;
+  margin-left: -0.5rem;
+  box-sizing: border-box;
+}
+
+.text-area {
+  padding: 15px 15px;
+  line-height: 1.5rem;
 }
